# FII-ASET

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  gunicorn.conf.py  nginx.conf  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build.yml  deploy.yml
backend/: Untitled Diagram.drawio  celery.sh  collector.py  entrypoint.sh  manage.py
backend/backend/: celery.py  loggers.py  urls.py
backend/backend/settings/: common.py  prod.py  testing.py
backend/frontend/: context_processors.py
backend/frontend/services/: actions_service.py
backend/frontend/static_src/: package-lock.json  package.json  tailwind.config.js
backend/frontend/templates/: action_info.html  base.html  index.html  upload_documents.html  view_available_actions.html  view_personal_actions.html
backend/frontend/templates/components/: language_selector.html  theme_selector.html
backend/locale/en/LC_MESSAGES/: django.po
backend/locale/ro/LC_MESSAGES/: django.po
backend/profiles/: admin.py  apps.py  decorators.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
backend/profiles/migrations/: 0001_initial.py  0002_user_bank_statement_image_user_identity_card_image_and_more.py  0003_user_iban_user_personal_uid.py
backend/trading/: admin.py  apps.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/trading/exchanges/: nasdaq.py
backend/trading/migrations/: 0001_initial.py  0002_alter_account_balance_alter_account_owner_and_more.py  0002_alter_position_bought_at.py  0003_exchange_short_name.py  0004_alter_exchange_name_alter_exchange_short_name_and_more.py  0005_remove_order_account_remove_order_security_and_more.py  0006_historicallimitorder_historicalmarketorder_and_more.py  0007_historicalsecurity.py  0008_historicalsecurity_users_purchased_and_more.py  0009_externalmarketorder_externalmarketholding_tax.py  0010_alter_historicallimitorder_executed_at_and_more.py  0011_alter_externalmarketorder_metadata.py  0012_historicalsecurity_description_security_description.py
backend/trading/scripts/: generate_fake_data.py  import_stocks.py  populate_stock_description.py
backend/trading/tests/: test_account_history.py  test_account_portfolio.py  test_market_making.py  test_security_action.py  test_taxes.py
diagrams/: Account Registration and Management Use Case Diagram.drawio  Manage Portfolio Use Case Diagram.drawio  Market Data Subscription Use Case Diagram.drawio  MotivareAI.txt  Place Trade Use Case Diagram.drawio  Portfolio-Management-Class.drawio  diagram.bpmn  market_data_pricing.drawio  orderandexecution.drawio  portfolio_management.drawio  risk_management.drawio  trading account.drawio  user_role_permissions.drawio
infrastructure/ansible/: inventory.yml  run.sh
infrastructure/ansible/collections/: requirements.yml
infrastructure/ansible/playbooks/: build-docker-images.yml  install-app.yml  install-autoscaler.yml  install-databases.yml  install-k3s.yml  install-monitoring.yml  main.yml  service-accounts.yml
infrastructure/ansible/playbooks/templates/: kubeconfig.yml.j2
infrastructure/ansible/templates/: kubeconfig.yml.j2
infrastructure/config/: prometheus-alerts.yml
infrastructure/k8s/: ingress.yml
infrastructure/kubernetes/: README.md  celery.yml  django-configmap.yml  django-ingress.yml  django-migrate-job.yml  django-secret.yml.txt  django.yml  nginx-static-ingress.yml  nginx-static-service.yml  nginx-static.yml  postgres.yml  rabbitmq.yml  redis.yml
sprints/sprint-1/: bejenari-artur.txt  frunza-dan.txt  ignat-vlad.txt  nastase-valentin.txt  stoica-tedy.txt  teodorescu-calin.txt
sprints/sprint-2/: frunza-dan.txt  ignat-vlad.txt  nastase-valentin.txt  stoica-tedy.txt  teodorescu-calin.txt
sprints/sprint-3/: frunza-dan.txt  ignat-vlad.txt  nastase-valentin.txt  stoica-tedy.txt  teodorescu-calin.txt
